err/aigo.err
Listing '.'...
Listing './bin'...
Compiling './bin/AIGO-gui.py'...
***   File "./bin/AIGO-gui.py", line 35
    print "AIGO is stopping because :"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AIGO'...
Compiling './lib/python3.5/site-packages/AIGO/Analyse.py'...
***   File "./lib/python3.5/site-packages/AIGO/Analyse.py", line 143
    FA.GPtoGO[a][g]  = set(filter (lambda(goid): not FA.G.isUnconnected(goid), FA.GPtoGO[a][g]))
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AIGO/FunctionalAnnotation.py'...
***   File "./lib/python3.5/site-packages/AIGO/FunctionalAnnotation.py", line 196
    print "Sorry, unknown file type : %s" % fileType
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/AIGO/ReferenceSet.py'...
***   File "./lib/python3.5/site-packages/AIGO/ReferenceSet.py", line 110
    print "Sorry, unknown file type !!"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/AIGO/Report.py'...
***   File "./lib/python3.5/site-packages/AIGO/Report.py", line 19
    print "\n=========================================================================="
                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/AIGO/go'...
Compiling './lib/python3.5/site-packages/AIGO/go/Graph.py'...
***   File "./lib/python3.5/site-packages/AIGO/go/Graph.py", line 150
    raise Exception, 'Node ' + str(n) + ' is already in the graph'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AIGO/go/OBO.py'...
***   File "./lib/python3.5/site-packages/AIGO/go/OBO.py", line 48
    except IOError as (inst):
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AIGO/gui'...
Compiling './lib/python3.5/site-packages/AIGO/gui/project.py'...
***   File "./lib/python3.5/site-packages/AIGO/gui/project.py", line 54
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AIGO/utils'...
Compiling './lib/python3.5/site-packages/AIGO/utils/Execute.py'...
***   File "./lib/python3.5/site-packages/AIGO/utils/Execute.py", line 9
    print "Warning, call of an unregistered statistics : %s"  % func
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/AIGO/utils/Logger.py'...
***   File "./lib/python3.5/site-packages/AIGO/utils/Logger.py", line 35
    print "\r" + self.timenow() + "\033[32;1minfo:\033[0m " + msg,
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AIGO/utils/Plot.py'...
***   File "./lib/python3.5/site-packages/AIGO/utils/Plot.py", line 129
    print "Sorry, can't identify the two sets in venn_2S"
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/AIGO/utils/Radar.py'...
***   File "./lib/python3.5/site-packages/AIGO/utils/Radar.py", line 25
    raise ValueError, 'unknown value for `frame`: %s' % frame
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/AIGO/utils/Venn.py'...
***   File "./lib/python3.5/site-packages/AIGO/utils/Venn.py", line 340
    print "venn.py -f output.png (--width 8) count_A_and_B count_A_not_B count_notA_And_B set_name_a, set_name_b"
                                                                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/AIGO-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
